fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -2727,6 +2727,12 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
     font-weight: 300;
     line-height: 1.25;
 }
+
+@media (max-width: 992px) {
+    .info-wrapper .token-descr {
+        font-size: 11px;
+    }
+}
 /* ##### Service Area CSS ##### */
 
 .service_single_content {
@@ -2853,10 +2859,35 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
     left: -15%;
 }
 
+.service_icon1{
+    margin-bottom: 30px;
+    display: inline-block;
+    /* max-width: 150px; */
+    min-height: 60px;
+    width: 130%;
+    position: relative;
+    left: -15%;
+}
+
+.service_single_content h5 {
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+
 @media (max-width: 768px) {
     .service_icon {
         width: 80%;
         left: inherit;
+    }
+
+    .service_icon1 {
+        width: 160%;
+        left: inherit;
+    }
+
+    .service_single_content h5 {
+        font-size: 11px;
+        width: 150%;
     }
 }
 
@@ -3924,11 +3955,24 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
     color: #fff;
     font-weight: normal;
     letter-spacing: 0.5px;
+    position: relative;
+}
+
+.pricing-item label:before {
+    position: absolute;
+    height: 100%;
+    width: 90%;
+    content: '';
+    left: 0;
     background-image: linear-gradient(117deg, #724eff, #5187ff);
     background-repeat: no-repeat;
     background-position: left;
     background-image: url(../img/svg/discount-bg-1.svg);
+    background-size: cover;
+    z-index: -1;
 }
+
+
 
 
 .single_price_table_content {
@@ -4095,6 +4139,13 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
     margin-bottom: 20px;
     border:5px solid #f1b909
 }
+
+@media(max-width: 767px){
+    .team-member-thumb{
+        width: 70%;
+     }
+ }
+
 
 .team-member-thumb a {
     display: block;
@@ -6489,9 +6540,15 @@ body.light-version {
 }
 
 .users .user img{
-    width: 100%;
     border-radius: 100%;
     border: 2px solid white;
+    border-radius: 100%;
+    border: 2px solid white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
 
 .users .user .user-thumb{
@@ -6502,6 +6559,13 @@ body.light-version {
     margin: 0 auto;
     margin-bottom: 10px;
     border: 2px solid #f1b909;
+}
+
+.users .user .user-thumb a {
+    display: block;
+    position: relative;
+    width: 100%;
+    padding-top: 100%;
 }
 
 .users .user .user-info h5 {
